feat:更新最新資料

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             </aside>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/1.51.1/plotly-basic.min.js" defer></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/plotly.js/1.51.1/plotly-locale-zh-tw.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/1.58.4/plotly-basic.min.js" integrity="sha512-7S1p+6A2VVIWu+EevZqeqXWos1Tn+mroZxpkZ9THWipecJkL7TLg2myv5cIAShu9j3+fjHyCvEh/d7BKegMY1g==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/1.58.4/plotly-locale-zh-tw.min.js" integrity="sha512-O/LBI+fSIhjpHo+K+dy512ivH1CbpnP2LXRcJSo8/3pTfMb1sPZE3EeYnqmkr68tqSdiSHwyUk2dU2nPQ7W6iQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.min.js" integrity="sha512-XdUZ5nrNkVySQBnnM5vzDqHai823Spoq1W3pJoQwomQja+o4Nw0Ew1ppxo5bhF2vMug6sfibhKWcNJsG8Vj9tg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="js/cases-trend.js" defer></script>
 </body>
 </html>
